# uniandes-devops-entrega-1

./: .dockerignore  .gitignore  Dockerfile  README.md  appspec.json  buildspec.yml  locustfile.py  manage.py  newrelic.ini  pyproject.toml  taskdef.json  wsgi.py
app/: __init__.py  config.py  models.py  routes.py  schemas.py
tests/: test_api.py  test_health.py
